# cpp_template

./: README.md  cookiecutter.json  justfile
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: .clang-format-ignore  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  iwyu_mappings.imp  justfile  pyproject.toml  requirements.in  requirements.txt  vcpkg.json
{{ cookiecutter.project_name }}/cmake/: ProjectFlags.cmake  Xcode.cmake
{{ cookiecutter.project_name }}/include/{{ cookiecutter.project_name }}/: lib.hpp
{{ cookiecutter.project_name }}/src/: CMakeLists.txt  main.cpp
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_name }}/: CMakeLists.txt  lib.cpp  lib.test.cpp
